--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <meta name="CocoaVersion" content="2113.3" />
   </head>
   <body>
-    <header class="header">
+    <!-- Main header under the body -->
+    < class="header">
+      <!-- Navigation bar inside the header -->
       <nav class="nav">
+        <!-- Logo and logo description inside the navigation -->
         <div class="nav-logos">
           <img class="nav-logo nav-logo-img" src="img/icon-title.png" />
           <img class="nav-logo nav-logo-title" src="img/icon-title-name.png" />
         </div>
+        <!-- Close Logo and logo description inside the navigation -->
+        <!-- Links in the navigation -->
         <div class="nav-options">
           <a class="nav-link products" href="#">Products</a>
           <a class="nav-link contactus" href="#">Contact us</a>
         </div>
+        <!-- Close Links in the navigation -->
       </nav>
+      <!-- Close Navigation bar inside the header -->
     </header>
+    <!-- Close Main header under the body -->
+    <p>Hello</p>
   </body>
 </html>
