--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- Main header under the body -->
-    < class="header">
+    <header class="header">
       <!-- Navigation bar inside the header -->
       <nav class="nav">
         <!-- Logo and logo description inside the navigation -->
