--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
       <!-- Close Navigation bar inside the header -->
     </header>
     <!-- Close Main header under the body -->
-    <p>Hello</p>
+    <!-- <p>Hello</p> -->
   </body>
 </html>
